--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-
+  <div class="nav-top">
+    <h1>SpaceWalkers</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+      </nav>
+  </div>
  <!-- navigation code here -->
 
   <div class="container home">
